# lifeline

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  LIFELINE.md  PRD.md  README.md  README.pt-BR.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: ARCHITECTURE.md  DEPLOY.md  INTEGRATION.md  M3_TIER1_SUPABASE.md  MCP_REMOTE.md
lifeline/: __init__.py  cli.py  cloud.py  context.py  entry.py  graph.py  ingest.py  mcp_server.py  oauth.py  recall.py  schema.sql  state.py  store.py  sync.py
lifeline/templates/: consent.html
site/: .nojekyll  CNAME  build.py  index.html  llms-full.txt  llms.txt  robots.txt  sitemap.xml
site/assets/css/: style.css
site/assets/js/: site.js
site/blog/: ai-context-handoff.html  context-engineering.html  hermes-agent-lifeline.html  index.html  share-of-context.html  time-to-context.html
site/content/: cli.md  compare.md  concepts.md  curate.md  getting-started.md  teams.md
site/content/blog/: ai-context-handoff.md  context-engineering.md  hermes-agent-lifeline.md  share-of-context.md  time-to-context.md
site/docs/: architecture.html  cli.html  compare.html  concepts.html  curate.html  getting-started.html  index.html  integration.html  mcp.html  teams.html
site/oauth/consent/: index.html
tests/: test_capture.py  test_cli.py  test_concurrency.py  test_context.py  test_entry.py  test_exam.py  test_gaps.py  test_graph.py  test_ingest_integrity.py  test_lines.py  test_mcp.py  test_oauth.py  test_projection.py  test_recall.py  test_rehash.py  test_supabase.py  test_sync.py
