[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lifeline-context"
version = "0.1.0"
description = "Runtime de contexto para desenvolvimento com IA — o projeto guarda por que ele é o que é; qualquer IA conecta e já sabe."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "aiosqlite>=0.19",
    "mcp>=1.0",
    "httpx>=0.27",   # adapter de nuvem (lifeline/cloud.py); já vinha via mcp, agora explícito
]

[project.optional-dependencies]
cloud = ["httpx>=0.27"]  # alias explícito p/ quem só quer o store Supabase

[project.scripts]
lifeline = "lifeline.cli:main"
lifeline-mcp = "lifeline.mcp_server:main"

# Pacote chato (flat). `find` com include evita repetir o bug do SDK antigo
# (packages=["lifeline"] que excluía subpacotes), caso subpacotes surjam.
[tool.setuptools.packages.find]
include = ["lifeline*"]

# `_legacy/` é a rev0 arquivada (importa a API antiga). Nunca coletar como teste.
[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["_legacy", "scripts", "build", "dist", ".*"]
