[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lifeline-context"
version = "0.3.0"
description = "Runtime de contexto para desenvolvimento com IA — o projeto guarda por que ele é o que é; qualquer IA conecta e já sabe."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "FSL-1.1-MIT" }   # source-available; converte p/ MIT em 2 anos. Versões <= 0.2.0 seguem MIT.
authors = [{ name = "jessianmart" }]
keywords = ["mcp", "ai", "llm", "context", "memory", "ledger", "agents", "claude", "provenance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "aiosqlite>=0.19",
    "mcp>=1.0",
    "httpx>=0.27",   # adapter de nuvem (lifeline/cloud.py); já vinha via mcp, agora explícito
]

[project.optional-dependencies]
cloud = ["httpx>=0.27"]  # alias explícito p/ quem só quer o store Supabase
embeddings = ["sentence-transformers>=2"]  # recall semântico DENSO (#0029) — opt-in; default é lexical
remote = ["python-multipart>=0.0.9"]  # AS OAuth hospedado: parse do form de /oauth/login e do /token
dev = ["pytest>=8"]       # ferramentas de teste (NÃO é dep de runtime) — usado no CI

[project.urls]
Homepage = "https://lifelinecontext.com"
Repository = "https://github.com/lifeline-context/lifeline"
Issues = "https://github.com/lifeline-context/lifeline/issues"

[project.scripts]
lifeline = "lifeline.cli:main"
lifeline-mcp = "lifeline.mcp_server:main"
lifeline-mcp-remote = "lifeline.mcp_server:main_remote"

# Pacote chato (flat). `find` com include evita repetir o bug do SDK antigo
# (packages=["lifeline"] que excluía subpacotes), caso subpacotes surjam.
[tool.setuptools.packages.find]
include = ["lifeline*"]

# empacota o schema da nuvem junto → `lifeline schema` funciona após pip install
[tool.setuptools.package-data]
lifeline = ["schema.sql"]

# `_legacy/` é a rev0 arquivada (importa a API antiga). Nunca coletar como teste.
[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["_legacy", "scripts", "build", "dist", ".*"]
